--- a/Languages/English/DefInjected/RecipeDef/Weapons_Heavy.xml
+++ b/Languages/English/DefInjected/RecipeDef/Weapons_Heavy.xml
@@ -7,5 +7,13 @@
   <BuildGunSimp.description>Assembly of a custom machine gun \nCaliber:7.62x51mm NATO</BuildGunSimp.description>
   <BuildGunSimp.jobString>Assembling Simp Gun.</BuildGunSimp.jobString>
 
+  <BuildFlamethrowerCrio.label>Build Cryolator</BuildFlamethrowerCrio.label>
+  <BuildFlamethrowerCrio.description>Build Cryolator \nCaliber:Nitrogen</BuildFlamethrowerCrio.description>
+  <BuildFlamethrowerCrio.jobString>Build Cryolator.</BuildFlamethrowerCrio.jobString>
+
+  <MakeGrenadeCryo.label>make cryogenic grenades x5</MakeGrenadeCryo.label>
+<MakeGrenadeCryo.description>Crafts 5 cryogenic grenades.</MakeGrenadeCryo.description>
+<MakeGrenadeCryo.jobString>creates grenades.</MakeGrenadeCryo.jobString>
+
 
 </LanguageData>
