--- a/Languages/Korean/DefInjected/CombatExtended.AmmoCategoryDef/AmmoCategories_SK.xml
+++ b/Languages/Korean/DefInjected/CombatExtended.AmmoCategoryDef/AmmoCategories_SK.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <Crio.label>Crio</Crio.label>
+  <Crio.label>크리오</Crio.label>
   <Crio.description>과냉각 헬륨.</Crio.description>
 
 
