--- a/Languages/English/DefInjected/ThingDef/Buildings_Natural.xml
+++ b/Languages/English/DefInjected/ThingDef/Buildings_Natural.xml
@@ -5,7 +5,7 @@
   <HiveAntis.description>A hive of Antis. If activated, it will spawn additional insects and hives over time, as well as valuable insect jelly.</HiveAntis.description>
 
 
-  <!--<GarbagePoweredGenerator.label>Recycling Generator</GarbagePoweredGenerator.label>-->
-  <!--<GarbagePoweredGenerator.description>Breaking down waste to generate electricity.</GarbagePoweredGenerator.description>-->
+  <GarbagePoweredGenerator.label>Recycling Generator</GarbagePoweredGenerator.label>
+ <GarbagePoweredGenerator.description>Breaking down waste to generate electricity.</GarbagePoweredGenerator.description>
 
 </LanguageData>
