--- a/Languages/Russian/DefInjected/DamageDef/Damages_Misc.xml
+++ b/Languages/Russian/DefInjected/DamageDef/Damages_Misc.xml
@@ -3,5 +3,8 @@
 
   <BombAntigrav.deathMessage>{0} был убит</BombAntigrav.deathMessage>
 
+  <CrioBomb.label>Обморожение</CrioBomb.label>
+  <CrioBomb.deathMessage>{0} был убит.</CrioBomb.deathMessage>
+
 
 </LanguageData>
