--- a/Languages/English/DefInjected/RecipeDef/Recipes_Meals_Special.xml
+++ b/Languages/English/DefInjected/RecipeDef/Recipes_Meals_Special.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<Defs>
-<!--
-	<RecipeDef ParentName="CookMealSpecialBase_SK">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<LanguageData>
+
+  <!-- <RecipeDef ParentName="CookMealSpecialBase_SK">
 		<defName>MakeMakiRolls</defName>
 		<label>make maki rolls</label>
 		<description>Make maki rolls from rice, algae and fish meat. Produces 2.</description>
@@ -216,80 +216,14 @@
 			<li>ElectricStove_Pro</li>
 		</recipeUsers>
 		<researchPrerequisite>Food_C6</researchPrerequisite>
-	</RecipeDef>
-	-->
-	
-	
+	</RecipeDef> -->
+<CookMealBera.label>Cook a Bera salad</CookMealBera.label>
+<CookMealBera.description>A simple, delicious salad.</CookMealBera.description>
+<CookMealBera.jobString>Cooks a tomato salad.</CookMealBera.jobString>
 
-  <RecipeDef ParentName="CookMealBase">
-    <defName>CookMealBera</defName>
-    <label>Приготовить салат "Бэра"</label>
-    <description>Простой вкусный салат.</description>
-    <jobString>Готовит салат из томатов.</jobString>
-    <workSpeedStat>CookSpeed</workSpeedStat>
-    <requiredGiverWorkType>Cooking</requiredGiverWorkType>
-    <effectWorking>Cook</effectWorking>
-    <soundWorking>Recipe_CookMeal</soundWorking>
-    <allowMixingIngredients>true</allowMixingIngredients>
-    <ingredientValueGetterClass>IngredientValueGetter_Nutrition</ingredientValueGetterClass>
-    <ingredients>
-      <li>
-        <filter>
-         <thingDefs>
-			  <li>RawTomatoes</li>
-		</thingDefs>
-        </filter>
-        <count>0.3</count>
-      </li>
-	  <li>
-        <filter>
-         <thingDefs>
-			  <li>Salt</li>
-		</thingDefs>
-        </filter>
-        <count>0.01</count>
-      </li>
-    </ingredients>
-    <products>
-      <MealFine_Bera>1</MealFine_Bera>
-    </products>
-    <workSkill>Cooking</workSkill>
-    <displayPriority>100</displayPriority>
-  </RecipeDef>
+<CookMeal4Bera.label>Cook x4 Bera salads</CookMeal4Bera.label>
+<CookMeal4Bera.description>A simple, delicious salad, 4 servings.</CookMeal4Bera.description>
+<CookMeal4Bera.jobString>Cooks a tomato salad.</CookMeal4Bera.jobString>
 
-<RecipeDef ParentName="CookMealBase">
-    <defName>CookMeal4Bera</defName>
-    <label>Приготовить 4 салата "Бэра"</label>
-    <description>Простой вкусный салат 4 порции.</description>
-    <jobString>Готовит салат из томатов.</jobString>
-    <workSpeedStat>CookSpeed</workSpeedStat>
-    <requiredGiverWorkType>Cooking</requiredGiverWorkType>
-    <effectWorking>Cook</effectWorking>
-    <soundWorking>Recipe_CookMeal</soundWorking>
-    <allowMixingIngredients>true</allowMixingIngredients>
-    <ingredientValueGetterClass>IngredientValueGetter_Nutrition</ingredientValueGetterClass>
-    <ingredients>
-      <li>
-        <filter>
-         <thingDefs>
-			  <li>RawTomatoes</li>
-		</thingDefs>
-        </filter>
-        <count>1.2</count>
-      </li>
-	  <li>
-        <filter>
-         <thingDefs>
-			  <li>Salt</li>
-		</thingDefs>
-        </filter>
-        <count>0.03</count>
-      </li>
-    </ingredients>
-    <products>
-      <MealFine_Bera>4</MealFine_Bera>
-    </products>
-    <workSkill>Cooking</workSkill>
-    <displayPriority>400</displayPriority>
-  </RecipeDef>
-</Defs>
+
+</LanguageData>
