--- a/Languages/English/DefInjected/ThingDef/NewFragments.xml
+++ b/Languages/English/DefInjected/ThingDef/NewFragments.xml
@@ -3,6 +3,7 @@
 
   <Fragment_Icon.label>Fencing</Fragment_Icon.label>
   <Fragment_Cocon.label>Cocon</Fragment_Cocon.label>
+<Fragment_Crio.label>Icicles</Fragment_Crio.label>
 
 
 </LanguageData>
