--- a/Languages/Korean/DefInjected/HediffDef/Hediffs_Global_Misc.xml
+++ b/Languages/Korean/DefInjected/HediffDef/Hediffs_Global_Misc.xml
@@ -37,8 +37,9 @@
 
   <Icing.label>얼음으로 결속</Icing.label>
   <Icing.description>추위는 움직임을 방해합니다</Icing.description>
-  <Icing.stages.0.label>아이싱</Icing.stages.0.label>
   <Icing.labelNoun>아이싱</Icing.labelNoun>
 
+
+  <!--<Icing.stages.0.label>아이싱</Icing.stages.0.label>-->
 
 </LanguageData>
