--- a/Languages/Korean/DefInjected/ThingDef/NewFragments.xml
+++ b/Languages/Korean/DefInjected/ThingDef/NewFragments.xml
@@ -3,6 +3,7 @@
 
   <Fragment_Icon.label>울타리</Fragment_Icon.label>
   <Fragment_Cocon.label>코콘</Fragment_Cocon.label>
+<Fragment_Crio.label>고드름</Fragment_Crio.label>
 
 
 </LanguageData>
