--- a/Languages/Russian/DefInjected/HediffDef/Hediffs_Global_Misc.xml
+++ b/Languages/Russian/DefInjected/HediffDef/Hediffs_Global_Misc.xml
@@ -37,8 +37,9 @@
 
   <Icing.label>Скован Льдом</Icing.label>
   <Icing.description>Холод сковывает движение</Icing.description>
-  <Icing.stages.0.label>Обледенение</Icing.stages.0.label>
   <Icing.labelNoun>Обледенение</Icing.labelNoun>
 
+
+  <!--<Icing.stages.0.label>Обледенение</Icing.stages.0.label>-->
 
 </LanguageData>
