--- a/Languages/Russian/DefInjected/ThingDef/NewFragments.xml
+++ b/Languages/Russian/DefInjected/ThingDef/NewFragments.xml
@@ -3,6 +3,7 @@
 
   <Fragment_Icon.label>Ограждение</Fragment_Icon.label>
   <Fragment_Cocon.label>Кокон</Fragment_Cocon.label>
+  <Fragment_Crio.label>Сосульки</Fragment_Crio.label>
 
 
   <!--<Fragment_Crater_Smal.label>- - -</Fragment_Crater_Smal.label>-->
