--- a/Languages/English/DefInjected/ThingDef/Weapons_Heavy.xml
+++ b/Languages/English/DefInjected/ThingDef/Weapons_Heavy.xml
@@ -6,8 +6,158 @@
   <Gun_Simp.label>PKM-Custom</Gun_Simp.label>
   <Gun_Simp.description>PKM — Kalashnikov machine gun modernized. Assembled by special order. The barrel and some parts are replaced for NATO cartridge (762x51mmNATO). Also has an engraving on the butt "Simpay should not suffer"</Gun_Simp.description>
 
-  <FlamethrowerCrio.label>Cryolator</FlamethrowerCrio.label>
-  <FlamethrowerCrio.description>The Cryolator is a powerful experimental weapon that can freeze enemies.</FlamethrowerCrio.description>
+
+  <!-- <ThingDef ParentName="BaseGun_Heavy">
+		<defName>FlamethrowerCrio</defName>
+		<label>Криолятор</label>
+		<description>Криолятор — это мощное экспериментальное оружие, которое может замораживать врагов.</description>
+		<graphicData>
+			<texPath>Things/Weapons/cryolator</texPath>
+			<graphicClass>Graphic_Single</graphicClass>
+		</graphicData>
+		<techLevel>Industrial</techLevel>
+		<statBases>
+			<MarketValue>2300</MarketValue>
+			<SightsEfficiency>1</SightsEfficiency>
+			<ShotSpread>0.17</ShotSpread>
+			<SwayFactor>1.5</SwayFactor>
+			<RangedWeapon_Cooldown>0.39</RangedWeapon_Cooldown>
+			<Bulk>8</Bulk>
+			<Mass>5.5</Mass>
+		</statBases>
+		<relicChance>0</relicChance>
+		<destroyOnDrop>False</destroyOnDrop>
+		<weaponTags>
+			<li>RKT1</li>
+			<li>OGR1</li>
+			<li>Glaunchers</li>
+			<li>CE_AI_Rifle</li>
+			<li>CE_AI_Launcher</li>
+			<li>EliteGun</li>
+		</weaponTags>
+		<weaponClasses>
+			<li>ShortShots</li>
+		</weaponClasses>
+		<tradeTags>
+			<li>Exotic</li>
+			<li>ExoticMisc</li>
+			 <li>WeaponRanged</li>
+		</tradeTags>
+		<thingCategories>
+			<li>Glaunchers</li>
+		</thingCategories>
+		<verbs>
+			<li Class="CombatExtended.VerbPropertiesCE">
+				<verbClass>CombatExtended.Verb_ShootCE</verbClass>
+				<recoilAmount>0.95</recoilAmount>
+				<hasStandardCommand>true</hasStandardCommand>
+				<defaultProjectile>Bullet_Flamethrower_Crio</defaultProjectile>
+				<warmupTime>4.0</warmupTime>
+				<range>20</range>
+				<minRange>6</minRange>
+				<ai_AvoidFriendlyFireRadius>3</ai_AvoidFriendlyFireRadius>
+				<targetParams>
+					<canTargetLocations>true</canTargetLocations>
+				</targetParams>
+				<soundCast>HissFlamethrower</soundCast>
+				<muzzleFlashScale>0</muzzleFlashScale>
+				<ticksBetweenBurstShots>3</ticksBetweenBurstShots>
+				<burstShotCount>1</burstShotCount>
+			</li>
+		</verbs>
+		<comps>
+			<li Class="CombatExtended.CompProperties_AmmoUser">
+			    <magazineSize>1</magazineSize>
+                <reloadTime>0.7</reloadTime>
+				<ammoSet>AmmoSet_CrioFlamethrower</ammoSet>
+			</li>
+			<li Class="CombatExtended.CompProperties_FireModes">
+				<aiUseBurstMode>false</aiUseBurstMode>
+				<aimedBurstShotCount>1</aimedBurstShotCount>
+				<aiAimMode>AimedShot</aiAimMode>
+			</li>
+		</comps>
+		<smeltProducts>
+			<Heavy_Component>1</Heavy_Component>
+			<Weapon_Parts>8</Weapon_Parts>
+			<Plastic>12</Plastic>
+		</smeltProducts>
+		<thingSetMakerTags>
+			<li>RewardStandardHighFreq</li>
+		</thingSetMakerTags>
+	</ThingDef>
+	
+	<RecipeDef ParentName="RangedWeaponRecipeBase">
+		<defName>BuildFlamethrowerCrio</defName>
+		<label>Сборка Криолятор</label>
+		<description>Сборка Криолятора  \nCaliber:Азот</description>
+		<jobString>Сборка Криолятора.</jobString>
+		<workAmount>23000</workAmount>
+		<skillRequirements>
+			<Crafting>16</Crafting>
+		</skillRequirements>
+		<ingredients>
+			<li>
+				<filter>
+					<thingDefs>
+						<li>Heavy_Component</li>
+					</thingDefs>
+				</filter>
+				<count>3</count>
+			</li>
+			<li>
+				<filter>
+					<thingDefs>
+						<li>Weapon_Parts</li>
+					</thingDefs>
+				</filter>
+				<count>12</count>
+			</li>
+			<li>
+				<filter>
+					<thingDefs>
+						<li>ComponentIndustrial</li>
+					</thingDefs>
+				</filter>
+				<count>15</count>
+			</li>
+			<li>
+				<filter>
+					<categories>
+						<li>Metallic</li>
+					</categories>
+				</filter>
+				<count>26</count>
+			</li>
+			<li>
+				<filter>
+					<thingDefs>
+						<li>Plastic</li>
+					</thingDefs>
+				</filter>
+				<count>30</count>
+			</li>
+		</ingredients>
+		<products>
+			<FlamethrowerCrio>1</FlamethrowerCrio>
+		</products>
+		<fixedIngredientFilter>
+			<thingDefs>
+				<li>Heavy_Component</li>
+				<li>Weapon_Parts</li>
+				<li>ComponentIndustrial</li>
+				<li>Plastic</li>
+			</thingDefs>
+			<categories>
+				<li>SLDBar</li>
+				<li>USLDBar</li>
+			</categories>
+		</fixedIngredientFilter>
+		<recipeUsers>
+			<li>AdvWeaponCraftingWorkTable</li>
+		</recipeUsers>
+	    <researchPrerequisite>MultibarrelWeapons</researchPrerequisite>
+	</RecipeDef> -->
 
   <Proj_GrenadeCryo.label>Cryo Grenade</Proj_GrenadeCryo.label>
 
@@ -15,5 +165,8 @@
   <Weapon_Grenade_Cryo.description>A high-tech grenade that lowers the temperature in the blast radius to critical values ​​when it explodes. It can freeze the target or damage their limbs. Its use indoors is difficult due to the possibility of bouncing off walls and other objects. However, opponents almost never miss, and their grenades are especially dangerous for the player in confined spaces and narrow passages.</Weapon_Grenade_Cryo.description>
   <Weapon_Grenade_Cryo.verbs.0.label>Throws a Cryo Grenade</Weapon_Grenade_Cryo.verbs.0.label>
 
+
+  <!--<FlamethrowerCrio.label>Cryolator</FlamethrowerCrio.label>-->
+  <!--<FlamethrowerCrio.description>The Cryolator is a powerful experimental weapon that can freeze enemies.</FlamethrowerCrio.description>-->
 
 </LanguageData>
