--- a/Languages/Korean/DefInjected/ThingDef/Plants_Cultivated_Vegetables.xml
+++ b/Languages/Korean/DefInjected/ThingDef/Plants_Cultivated_Vegetables.xml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <Plant_TreeBioHarbinger.label>가시</Plant_TreeBioHarbinger.label>
-  <Plant_TreeBioHarbinger.description>가시는 피에 굶주린 식물로 신체를 천천히 생체물질로 변화시킵니다.</Plant_TreeBioHarbinger.description>
+  <!--<Plant_TreeBioHarbinger.label>가시</Plant_TreeBioHarbinger.label>-->
+  <!--<Plant_TreeBioHarbinger.description>가시는 피에 굶주린 식물로 신체를 천천히 생체물질로 변화시킵니다.</Plant_TreeBioHarbinger.description>-->
 
-  <BioHarbingeSeed.label>가시 씨앗</BioHarbingeSeed.label>
-  <BioHarbingeSeed.description>가시나무 씨앗입니다. 근처에 있는 시체나 고기를 먹는 새로운 선구자 나무를 심기 위해 심을 수 있습니다.</BioHarbingeSeed.description>
+  <!--<BioHarbingeSeed.label>가시 씨앗</BioHarbingeSeed.label>-->
+  <!--<BioHarbingeSeed.description>가시나무 씨앗입니다. 근처에 있는 시체나 고기를 먹는 새로운 선구자 나무를 심기 위해 심을 수 있습니다.</BioHarbingeSeed.description>-->
 
 
   <!--<ChoppedStump_BioHarbinger.label>잘게 썬 가시 그루터기</ChoppedStump_BioHarbinger.label>-->
